pkg chnged back to python_chatbot

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = chatbot
+name = python_chatbot
 description = Extensible IRC chatbot written in python.
 author = harrislapiroff
 author-email = harris@chromamine.com
