--- a/setup.cfg
+++ b/setup.cfg
@@ -24,10 +24,13 @@ packages = find:
 include_package_data = True
 package_dir =
     =src
+
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.1a0,<3.2a0
+
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = service-identity;
+install_requires = service-identity; twisted
+
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
